# dotfiles

./: .aliases  .bashrc  .chezmoiignore  .exports  .functions  .gitconfig  .gitignore  .profile  README.md  betterlockscreenrc  bspwm.nix  ci.nix  config  configuration.nix  default.nix  distributed-build.nix  dot_aliases  dot_bashrc  dot_exports  dot_functions  dot_gitconfig  dot_profile  flake.nix  hardware-configuration.nix  home.nix  install-nixos-vm.sh  install.sh  iphone.nix  packages.nix  playerctl-status.sh  polybar.ini  polybar.nix  readme.md  run_dependencies.sh  run_vscode_extensions.sh  tmp-hosts-server.nix  tmp-hosts.nix  update.sh  xsecurelock.patch
.github/: dependabot.yml
config/: ssh.nix
devcontainer/: .bashrc  .exports  .profile
docs/: build.py  default.nix
hosts/: README.md  default.nix  index.md  nix.conf  server.nix  setup.md
install/: certificate.sh
laptop/: .aliases  .bashrc  .exports  .functions  .profile
modules/: bar.nix  bootloader.nix  browser.nix  compositor.nix  default.nix  editor.nix  file-manager.nix  file-sync.nix  file-synchronisation.nix  lan.nix  launcher.nix  module-list.nix  packages.nix  shell.nix  syncthing.nix  terminal-emulator.nix  vpn.nix  window-manager.nix
overlays/: ci.nix  default.nix
patches/: 163701.patch  173235.patch  fix-yggdrasil.patch  mosh-no-firewall-open.patch  qtile-without-wlroots.patch  revert-x-update-due-to-segfault.patch
pkgs/: default.nix
private_dot_config/: starship.toml.tmpl
templates/python/: README.md  flake.nix  pyproject.toml
templates/python/.github/workflows/: ci.yml
(+260 files in other folders)
