[tool.poetry]
name = "change-me"
version = "0.1.0"
description = ""
authors = ["Joel <joel@joel.tokyo>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
install_types = true
ignore_missing_imports = true
non_interactive = true
strict = true